fix: there is a horizontal scrollbar in avatar modal

--- a/packages/webapp/src/features/user/UserAvatar/index.less
+++ b/packages/webapp/src/features/user/UserAvatar/index.less
@@ -9,6 +9,12 @@
     }
 }
 
+.profile-modal {
+  .rs-modal-body {
+    overflow: unset !important;
+  }
+}
+
 .rs-drawer-content {
   margin-top: 30%;
   height: auto;
